--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
-<!DOCTYPE html>
-<html>
+<!-- Aufgabe: 13.0 
+Name: Laura Giannotta
+Matrikel: 258470
+Datum: 08.02.2018
+Hiermit versichere ich, dass ich diesen
+Code selbst geschrieben habe. Er wurde
+nicht kopiert und auch nicht diktiert. -->
+
+<html lang="de">
 <head>
-<meta charset="utf-8" />
-<title>Steckbrief</title>
+<meta charset="UTF-8">
+<title>Online Portfolio</title>
+<link rel="stylesheet" type="text/css"
+	href="stylesheet.css">
+<script src="Portfolio.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Quicksand:300" rel="stylesheet"> 
+<meta name="viewport" content="width=device=width, initial-scale=1.0">
 
 </head>
 
 <body>
-	<p>hallo welt</p>
 
+<header>
+<div id="fixed" style="height: 5.3em;"> <h1> Laura Giannotta </h1></div>
+	<div id="hintergrund">
+		<div class="dropdown" id="menufixed">
+  		<span> 
+  		<img class="menuIcon" alt="menu" src="Pics/menu.png">
+  		</span>
+		<div class="dropdown-content">
+	  		<a href="#"><img src="Pics/Home.png"></a> 
+	  		<a href="#uberMich"><img src="Pics/Ich.png"></a> 
+	 		<a href="#meineArbeiten"><img src="Pics/Arbeit.png"></a>
+			<a href="#Kontakt"><img src="Pics/Kontakt.png"></a>
+		</div>
+	</div>
+	</div>
+</header>
+
+<main>
+	<p id="mitte"> Herzlich<br> Willkommen </p>
+	
+	<p  id="uberMich">Anker</p>
+	<h2>Über mich</h2>
+	<section class="ich">
+	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
+	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. <br></p>
+	</section>
+
+	
+
+
+</main>
+
+<footer>
+
+<h4 id="Kontakt">Kontakt</h4>
+		<div><a href="https://sftp.hs-furtwangen.de/~giannotl/EIA1/Semesteraufgabe/Impressum.html" target="_blank">Impressum</a> <br>
+		&#xA9; Laura Giannotta <br>
+		 la.giannotta@web.de <br> </div>
+	<div> <img id="hfu" alt="hfulogo" src=Pics/HFU.png></div>
+
+
+</footer>
 
 </body>
 </html>
+
