--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ nicht kopiert und auch nicht diktiert. -->
 <meta charset="UTF-8">
 <title>Userpage</title>
 <link rel="stylesheet" type="text/css"
-	href="stylesheet.css">
+	href="stylesheetUserpage.css">
 <script src="Portfolio.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Quicksand:300" rel="stylesheet"> 
 <meta name="viewport" content="width=device=width, initial-scale=1.0">
