--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,7 @@ body {
 </head>
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://lauragiannotta.github.io/index.html" target="_blank">Userpage</a>, 22.03.2018<br>
+	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br>
 	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 </body>
 </html>
