--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ nicht kopiert und auch nicht diktiert. -->
 	<h2>Über mich</h2>
 	<section class="ich">
 	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
-	<p>Hier meine EIA2 Aufgaben:</p><br>
+	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. <br></p>
 	</section>
 
 	
