--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@ nicht kopiert und auch nicht diktiert. -->
 	<h2>Über mich</h2>
 	<section class="ich">
 	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
-	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. <br></p>
+	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. Hier meine EIA2 Aufgaben: <br></p>
+	<div>
+	<a href="" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
+	</div>
 	</section>
 
 	
