--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ nicht kopiert und auch nicht diktiert. -->
 	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
 	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. Hier meine EIA2 Aufgaben: <br></p>
 	<div>
-	<a href="" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
 	</div>
 	</section>
 
