--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,18 +13,16 @@ body {
 </head>
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br>
-	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
+	
 	
 	Aufgabe 1<br>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="blank">1.2.3 Kontrolle</a>
-	<a href="" target="blank">1.2.2 Grafik</a>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">1.2.1 Tracetable Boxes</a>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">1.1 Tracetable Cows</a>
-	<br><br>
-	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="blank">Aufgabe1.2.3 Kontrolle, 8.4.2018</a>
+	<a href="" target="blank">Aufgabe1.2.2 Grafik, 8.4.2018</a>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">Aufgabe1.2.1 Tracetable Boxes, 8.4.2018</a>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows, 8.4.2018</a>
 	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
-	
+	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br>
+	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 </body>
 </html>
