--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,10 +16,10 @@ body {
 	
 	
 	Aufgabe 1<br>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="blank">Aufgabe1.2.3 Kontrolle, 8.4.2018</a>
-	<a href="" target="blank">Aufgabe1.2.2 Grafik, 8.4.2018</a>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">Aufgabe1.2.1 Tracetable Boxes, 8.4.2018</a>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows, 8.4.2018</a>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="blank">Aufgabe1.2.3 Kontrolle</a>, 8.4.2018<br>
+	<a href="" target="blank">Aufgabe1.2.2 Grafik</a>, 8.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">Aufgabe1.2.1 Tracetable Boxes</a>, 8.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows</a>, 8.4.2018<br>
 	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
 	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br>
