--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@ nicht kopiert und auch nicht diktiert. -->
 	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
 	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. Hier meine EIA2 Aufgaben: <br></p>
 	<div>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
+		<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="blank">Aufgabe1.2.3 Kontrolle</a>, 8.4.2018<br>
+	<a href="" target="blank">Aufgabe1.2.2 Grafik</a>, 8.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">Aufgabe1.2.1 Tracetable Boxes</a>, 8.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows</a>, 8.4.2018<br>
+		<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
 	</div>
 	</section>
 
