--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@ nicht kopiert und auch nicht diktiert. -->
 	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
 	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. Hier meine EIA2 Aufgaben: <br></p>
 	<div>
-
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aktivität2.jpeg" target="blank">Aufgabe1.2.4 Aktivitätsdiagramm2</a>, 8.4.2017<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aktivität1.jpeg" target="blank">Aufgabe1.2.4 Aktivitätsdiagramm1</a>, 8.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="blank">Aufgabe1.2.3 Kontrolle</a>, 8.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/BoxesGrafik.jpeg" target="blank">Aufgabe1.2.1 Grafik</a>, 8.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">Aufgabe1.2.1 Tracetable Boxes</a>, 8.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows</a>, 8.4.2018<br>
-		<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
+	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
+	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
+	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 	</div>
 	</section>
 
