--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ nicht kopiert und auch nicht diktiert. -->
 	<div class="uebermich"><img src="Pics/Portrait.jpg"></div>
 	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. Hier meine EIA2 Aufgaben: <br></p>
 	<div>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aufg2.html" target="_blank">Aufgabe2 Memory</a>, 15.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aktivität2.jpeg" target="blank">Aufgabe1.2.4 Aktivitätsdiagramm2</a>, 8.4.2017<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aktivität1.jpeg" target="blank">Aufgabe1.2.4 Aktivitätsdiagramm1</a>, 8.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/BoxesGrafik.jpeg" target="blank">Aufgabe1.2.1 Grafik</a>, 8.4.2018<br>
