--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,8 +13,12 @@ body {
 </head>
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	
 	<br>
+	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
+	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
+	<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Konzept.jpeg" target="_blank">Aufgabe2 Memory</a>, 18.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aktivitätsdiagramm.jpeg" target="_blank">Aufgabe2 Memory</a>, 18.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aufg2.html" target="_blank">Aufgabe2 Memory</a>, 15.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aktivität2.jpeg" target="blank">Aufgabe1.2.4 Aktivitätsdiagramm2</a>, 8.4.2017<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Aktivität1.jpeg" target="blank">Aufgabe1.2.4 Aktivitätsdiagramm1</a>, 8.4.2018<br>
@@ -23,7 +27,6 @@ body {
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows</a>, 8.4.2018<br>
 	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
-	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
-	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
+
 </body>
 </html>
