--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,7 +17,7 @@ body {
 	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
 	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 	<br>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aktivitätsdiagramm (2).jpeg target="_blank">Aufgabe2 Memory</a>, 18.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aktivitätsdiagramm(2).jpeg" target="_blank">Aufgabe2 Memory</a>, 18.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aufg2.html" target="_blank">Aufgabe2 Memory</a>, 15.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Konzept.jpeg" target="_blank">Aufgabe2 Konzept</a>, 18.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aktivitätsdiagramm.jpeg" target="_blank">Aufgabe2 Aktivitätsdiagramm</a>, 18.4.2018<br>
