--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ nicht kopiert und auch nicht diktiert. -->
 	<p> Ich bin Laura, Medienstudentin der <a href="https://www.hs-furtwangen.de/" target="_blank">Hochschule Furtwangen</a>. Hier meine EIA2 Aufgaben: <br></p>
 	<div>
 
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aktivitätsdiagramm(2).jpeg" target="_blank">Aktivitätsdiagramm Aufgabe3</a>, 18.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aufgabe3.html" target="_blank">Aufgabe3 Memory</a>, 22.4.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aktivitätsdiagramm(2).jpeg" target="_blank">Aufgabe3 Aktivitätsdiagramm</a>, 18.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aufg2.html" target="_blank">Aufgabe2 Memory</a>, 15.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Konzept.jpeg" target="_blank">Aufgabe2 Konzept</a>, 18.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aktivitätsdiagramm.jpeg" target="_blank">Aufgabe2 Aktivitätsdiagramm</a>, 18.4.2018<br>
