--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,6 +17,7 @@ body {
 	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
 	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 	<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/konzept4.jpeg " target="_blank">Aufgabe4 Konzept</a>, 25.4.2018<br>	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aufgabe3.html" target="_blank">Aufgabe3 Memory</a>, 22.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aktivitätsdiagramm(2).jpeg" target="_blank">Aufgabe3 Aktivitätsdiagramm</a>, 18.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufg2/Aufg2.html" target="_blank">Aufgabe2 Memory</a>, 15.4.2018<br>
