--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,6 +17,8 @@ body {
 	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
 	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 	<br>
+	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.2/Memory.html" target="_blank">Aufgabe4.2</a>, 05.05.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.1/DatabaseClient.html" target="_blank">Aufgabe4.1</a>, 09.05.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/konzept4.jpeg " target="_blank">Aufgabe4 Konzept</a>, 25.4.2018<br>	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aufgabe3.html" target="_blank">Aufgabe3 Memory</a>, 22.4.2018<br>
