--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -18,6 +18,8 @@ body {
 	<a href="https://github.com/lauragiannotta" target="_blank">Repository</a>, 22.03.2018<br>
 	<br>
 	
+	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/Eiazept.jpeg" target="_blank">Aufgabe6 Konzept</a>, 16.05.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe5/Heroku.html" target="_blank">Aufgabe5.1</a>, 12.05.2018<br> 
 	<a href="https://eiaherokuapp.herokuapp.com/?a=20&b=10" target="_blank">Aufgabe5.2</a>, 12.05.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.2/Memory.html" target="_blank">Aufgabe4.2</a>, 05.05.2018<br> 
