--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ nicht kopiert und auch nicht diktiert. -->
 	<div>
 
 	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/DatabaseClient.html" target="_blank">Aufgabe6</a>, 27.05.2018<br>	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe5/Heroku.html" target="_blank">Aufgabe5.1</a>, 12.05.2018<br> 
 	<a href="https://eiaherokuapp.herokuapp.com/?a=20&b=10" target="_blank">Aufgabe5.2</a>, 12.05.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.2/Memory.html" target="_blank">Aufgabe4.2</a>, 05.05.2018<br>		
