--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -20,6 +20,7 @@ body {
 	
 	
 	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/Eiazeppppt.jpeg" target="_blank">Aufgabe6 Konzept</a>, 16.05.2018<br> 
 	<a href="https://mongodbrowser.herokuapp.com/?u=Database&p=eiasuggs1&a=ds147440.mlab.com:47440/eia2database&n=eia2database&c=Collection" target="_blank">Aufgabe7</a>, 03.06.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/DatabaseClient.html" target="_blank">Aufgabe6</a>, 27.05.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/Eiazept.jpeg" target="_blank">Aufgabe6 Konzept</a>, 16.05.2018<br> 
