--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@ nicht kopiert und auch nicht diktiert. -->
 	<div>
 
 	
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/DatabaseClient.html" target="_blank">Aufgabe6</a>, 27.05.2018<br>	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe9/fish.html" target="_blank">Aufgabe8</a>, 16.06.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe9/AiaZept.jpeg" target="_blank">Aufgabe9 Konzept</a>, 13.06.2018<br> 
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe8/Aufgabe8.html" target="_blank">Aufgabe8</a>, 14.06.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe8/Eiazeppppt.jpeg" target="_blank">Aufgabe8 Konzept</a>, 07.06.2018<br> 
+	<a href="https://mongodbrowser.herokuapp.com/?u=Database&p=eiasuggs1&a=ds147440.mlab.com:47440/eia2database&n=eia2database&c=Collection" target="_blank">Aufgabe7</a>, 03.06.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/DatabaseClient.html" target="_blank">Aufgabe6</a>, 27.05.2018<br>
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe6/Eiazept.jpeg" target="_blank">Aufgabe6 Konzept</a>, 16.05.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe5/Heroku.html" target="_blank">Aufgabe5.1</a>, 12.05.2018<br> 
 	<a href="https://eiaherokuapp.herokuapp.com/?a=20&b=10" target="_blank">Aufgabe5.2</a>, 12.05.2018<br> 
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.2/Memory.html" target="_blank">Aufgabe4.2</a>, 05.05.2018<br>		
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.1/DatabaseClient.html" target="_blank">Aufgabe4.1</a>, 05.05.2018<br>	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.2/Memory.html" target="_blank">Aufgabe4.2</a>, 05.05.2018<br> 
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/4.1/DatabaseClient.html" target="_blank">Aufgabe4.1</a>, 09.05.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe4/konzept4.jpeg " target="_blank">Aufgabe4 Konzept</a>, 25.4.2018<br>	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aufgabe3.html" target="_blank">Aufgabe3 Memory</a>, 22.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe3/Aktivitätsdiagramm(2).jpeg" target="_blank">Aufgabe3 Aktivitätsdiagramm</a>, 18.4.2018<br>
@@ -64,6 +70,8 @@ nicht kopiert und auch nicht diktiert. -->
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/BoxesGrafik.jpeg" target="blank">Aufgabe1.2.1 Grafik</a>, 8.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe2/Boxes.pdf" target="blank">Aufgabe1.2.1 Tracetable Boxes</a>, 8.4.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe1/Cows.pdf" target="_blank">Aufgabe1.1 Tracetable Cows</a>, 8.4.2018<br>
+	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
 	
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe00/Aufgabe00.html" target="_blank">Aufgabe00</a>, 22.03.2018<br>	
 	<a href="https://lauragiannotta.github.io/" target="_blank">Userpage</a>, 22.03.2018<br> 
