--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -22,7 +22,7 @@ body {
 	
 	 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/fish3.html" target="_blank">Aufgabe11</a>, 01.07.2018<br>
-	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/Aufgabe11.1/Start.html " target="_blank">Aufgabe11</a>, 01.07.2018<br>	
+	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/Aufgabe11.1/Start.html " target="_blank">Aufgabe11, Vorbereitung</a>, 01.07.2018<br>	
  	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/eiaze.jpeg" target="_blank">Aufgabe11 Konzept</a>, 28.06.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe10/fish2.html" target="_blank">Aufgabe10</a>, 25.06.2018<br>
  	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe10/EIAZept.jpeg" target="_blank">Aufgabe10 Konzept</a>, 21.06.2018<br> 
