--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -19,8 +19,8 @@ body {
 	<br>
 	
 	
-	
-	 
+	  
+	<a href="https://lauragiannotta.github.io/EIA2/Abschlussaufgabe/AbschlussZept.jpeg" target="_blank">Abschlussaufgabe Konzept</a>,04.07.2018<br> 
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/fish3.html" target="_blank">Aufgabe11</a>, 01.07.2018<br>
 	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/Aufgabe11.1/Start.html " target="_blank">Aufgabe11, Vorbereitung</a>, 01.07.2018<br>	
  	<a href="https://lauragiannotta.github.io/EIA2/Aufgabe11/eiaze.jpeg" target="_blank">Aufgabe11 Konzept</a>, 28.06.2018<br> 
